test/langtools/tools/javac/unnamedclass/SourceLevelErrorPosition.out
SourceLevelErrorPosition.java:8:1: compiler.err.preview.feature.disabled.plural: (compiler.misc.feature.implicit.classes)
1 error
